k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wio-admin
  namespace: wio
spec:
  selector:
    app: wio-admin
  ports:
    - name: http
      port: 80
      targetPort: http
